--- a/src/app/home/post/post/post.component.html
+++ b/src/app/home/post/post/post.component.html
@@ -6,13 +6,13 @@
   <label class="m-4 fw-bold text-primary">Cognome</label>
 
   <p class="mt-3 me-2 position-absolute top-0 end-0">
-    <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
+    <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#collapseExample1{{index}}" role="button"
        aria-expanded="false" aria-controls="collapseExample1">
       Details
       <i class="bi bi-ticket-detailed ms-1"></i>
     </a>
   </p>
-  <div class="collapse" id="collapseExample1">
+  <div class="collapse" id="collapseExample1{{index}}">
     <app-post-details></app-post-details>
   </div>
 
@@ -22,20 +22,22 @@
   class="card-img-top" alt="...">
 <div class="card-body">
   <p class="text-center bg-primary-subtle text-dark rounded-pill border border-primary"> {{post.text}} </p>
-
-  <ul class="nav nav-pills  mb-4">
-    <div *ngIf="errlike" class="alert alert-danger d-flex align-items-center" role="alert">
-      <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
-      <div>
-        Error Sistem
-      </div>
+  <div *ngIf="errlike" class="alert alert-danger d-flex align-items-center" role="alert">
+    <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
+    <div>
+      Error Sistem
     </div>
+  </div>
+  <ul class="nav nav-pills  mb-4">
     <li class="nav-item">
-
       <button type="button" id="buttonLike" class="btn btn btn-outline-primary mx-2"
-              [ngClass]="post.likes.length==0 ? 'btn-outline-primary' : 'active'"
-              (click)="clickLike(post.id, post.likes)"  >
-        <i class="bi bi-hand-thumbs-up "> </i>
+              [ngClass]="[post.liked ? 'active':'btn-outline-primary', loading ? 'disabled': ''] "
+              (click)="clickLike(post.id)"  >
+        <div *ngIf="loading; else elseBlock" class="spinner-border text-primary spinner-border-sm me-1" style="width: 10px" role="status">
+        </div>
+        <ng-template #elseBlock>
+        <i class="bi bi-hand-thumbs-up me-1"> </i>
+        </ng-template>
         like
       </button>
     </li>
@@ -52,7 +54,7 @@
       <div class="g-col-6">
         <div class="collapse" id="collapseExample{{index}}">
           <div class="card card-body">
-            <app-comment [commenti]="post.comments" [postId]="post.id"></app-comment>
+            <app-comment-list [postId]="post.id"></app-comment-list>
           </div>
         </div>
       </div>
