--- a/src/app/home/post/post/post.component.html
+++ b/src/app/home/post/post/post.component.html
@@ -51,7 +51,13 @@
       <div class="g-col-6">
         <div class="collapse" id="collapseExample{{index}}">
           <div class="card card-body">
-            <app-comment-list [commenti]="post.comments" [postId]="post.id"></app-comment-list>
+            <app-comment-list (newItemEvent)="getPost(post.id)" [commenti]="post.comments" [postId]="post.id"></app-comment-list>
+            <div *ngIf="errPost" class="alert alert-danger d-flex align-items-center" role="alert">
+              <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
+              <div>
+                Error loading comments
+              </div>
+            </div>
           </div>
         </div>
       </div>
