--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg E82139" style="background-color: var(--primary-2);">
   <div class="container-fluid">
-    <img class="img-thumbnail" src="assets/image/logo.png" alt="" width="60" height="60" >
-    <a class="navbar-brand fst-italic text-light fs-3"  style="margin-left: 20px">SaverNike Network</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
+    <img class="img-thumbnail" src="assets/image/logo.png" alt="" width="60" height="60">
+    <a class="navbar-brand fst-italic text-light fs-3" style="margin-left: 20px">SaverNike Network</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -20,7 +21,8 @@
         </li>
       </ul>
       <div class="dropdown">
-        <button type="button"class="btn btn-light mx-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <button type="button" class="btn btn-light mx-2 dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false">
           <i class="bi bi-bell"></i>
         </button>
         <ul class="dropdown-menu">
@@ -32,7 +34,7 @@
       <button type="button" class="btn btn-light mx-2">
         <i class="bi bi-chat"></i>
       </button>
-      <a type="button" class="btn btn-light mx-2" (click)="logout()" href="http://localhost:4200/" >
+      <a type="button" class="btn btn-light mx-2" (click)="logout()" href="http://localhost:4200/">
         <i class="bi bi-box-arrow-right"></i>
       </a>
     </div>
