--- a/src/app/home/post/create-new-comment/create-new-comment.component.html
+++ b/src/app/home/post/create-new-comment/create-new-comment.component.html
@@ -15,13 +15,16 @@
     </div>
   </div>
 </div>
-<div class="container md" style="margin-left: 35% ">
-  <button id="buttonSaveComment" type="button" class="btn btn-outline-primary ms-4"
-          [ngClass]="buttonSaveComment? 'disabled':''" (click)="createComment()">
-    <div *ngIf="buttonSaveComment" class="spinner-border text-light spinner-border-sm w-25"  role="status">
-    </div>
-    Save comment
-  </button>
+<div class="d-flex" style="margin-left: 35% ">
+  <div class="justfiy-content-end">
+    <button id="buttonSaveComment" type="button" class="btn btn-outline-primary ms-4"
+            [ngClass]="buttonSaveComment? 'disabled':''" (click)="createComment()">
+      <div *ngIf="buttonSaveComment" class="spinner-border text-light spinner-border-sm w-25"  role="status">
+      </div>
+      Save comment
+    </button>
+  </div>
+
 </div>
 
 
