da sistemare graficamente creaw new comment

--- a/src/app/home/post/create-new-post/create-new-post.component.html
+++ b/src/app/home/post/create-new-post/create-new-post.component.html
@@ -11,7 +11,7 @@
           <div *ngIf="err" class="alert alert-danger d-flex align-items-center" role="alert">
             <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
             <div>
-              Error Sistem
+              Error system
             </div>
           </div>
           <label for="exampleFormControlTextarea1" class="form-label">Descrizione</label>
