--- a/src/app/home/post/post-list/post-list.component.html
+++ b/src/app/home/post/post-list/post-list.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="errore" class="alert alert-danger d-flex align-items-center" role="alert">
   <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
   <div>
-    Error Sistem
+    Error System
   </div>
 </div>
 <ng-container *ngIf="loading; else elseBlock1">
