--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
       <div *ngIf="state" class="alert alert-danger d-flex align-items-center" role="alert">
         <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
         <div>
-          Error sistem
+          Error system
         </div>
       </div>
       <div *ngIf="err" class="alert alert-danger d-flex align-items-center" role="alert">
