--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -19,7 +19,7 @@
           <div *ngIf="err" class="alert alert-danger d-flex align-items-center" role="alert">
             <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
             <div>
-              Error Sistem
+              Error system
             </div>
           </div>
 
