--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -16,7 +16,7 @@
           <div *ngIf="errore" class="alert alert-danger d-flex align-items-center" role="alert">
             <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
             <div>
-              Error Sistem
+              Error system
             </div>
           </div>
           <ng-container *ngIf="friends.length!=0;else elseBlock2">
