--- a/src/app/home/post/create-new-comment/create-new-comment.component.html
+++ b/src/app/home/post/create-new-comment/create-new-comment.component.html
@@ -25,7 +25,7 @@
 <div class=" d-flex justify-content-end" >
     <button id="buttonSaveComment" type="button" class="btn btn-outline-primary ms-4"
             [ngClass]="buttonSaveComment? 'disabled':''" (click)="createComment()">
-      <div *ngIf="buttonSaveComment" class="spinner-border text-primary spinner-border-sm w-25"  role="status">
+      <div *ngIf="buttonSaveComment" class="spinner-border text-primary spinner-border-sm"  role="status">
       </div>
       Save comment
     </button>
