--- a/src/app/home/post/create-new-post/create-new-post.component.html
+++ b/src/app/home/post/create-new-post/create-new-post.component.html
@@ -29,7 +29,7 @@
       <div class="modal-footer" id="exampleModal4">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="chiusura()">Close</button>
         <button id="buttonSave" type="button" class="btn btn-danger" [ngClass]="buttonSave? 'disabled':' '" (click)="create()">
-          <div *ngIf="buttonSave" class="spinner-border text-light spinner-border-sm w-25 "  role="status">
+          <div *ngIf="buttonSave" class="spinner-border text-light spinner-border-sm"  role="status">
           </div>
           Save post</button>
       </div>
