--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -78,10 +78,10 @@
           </div>
           <div class="col-md-3">
             <label for="validationCustom05" class="form-label">Date of birth</label>
-            <input type="date" class="form-control" id="validationCustom05" style="width: 150px"
+            <input type="date" class="form-control w-auto" id="validationCustom05"
                    formControlName="dataOfBirth">
           </div>
-          <div class="col-md-6" style="margin-left: 50px">
+          <div class="col-md-6 ms-5">
             <label for="validationCustom03" class="form-label">Password</label>
             <input type="password" class="form-control" id="validationCustom06"
                    [ngClass]="password?.invalid && alert? 'is-invalid': '' " formControlName="password">
