--- a/src/app/home/post/post/post.component.html
+++ b/src/app/home/post/post/post.component.html
@@ -33,7 +33,7 @@
       <button type="button" id="buttonLike" class="btn btn btn-outline-primary mx-2"
               [ngClass]="[post.liked ? 'active':'btn-outline-primary', loading ? 'disabled': ''] "
               (click)="clickLike(post.id)"  >
-        <div *ngIf="loading; else elseBlock" class="spinner-border text-primary spinner-border-sm me-1" style="width: 10px" role="status">
+        <div *ngIf="loading; else elseBlock" class="spinner-border text-primary spinner-border-sm me-1"  role="status">
         </div>
         <ng-template #elseBlock>
         <i class="bi bi-hand-thumbs-up me-1"> </i>
@@ -57,9 +57,12 @@
               <div>
                 Error loading comments
               </div>
+              <button type="button" class="btn btn-outline-dark ms-4" (click)="getPost(post.id)"> Riprova</button>
             </div>
-            <div *ngIf="loadingPost" class="spinner-border text-primary spinner-border d-flex justify-content-center" style="width: 10px" role="status">
+            <div *ngIf="loadingPost" class="text-center">
+            <div class="spinner-border text-primary spinner-border"  role="status">
             </div>
+              </div>
           </div>
         </div>
       </div>
