sistemati alcuni responsive e anche alert e loading della carica dei commenti dopo salvati

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -76,12 +76,12 @@
               </label>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6">
             <label for="validationCustom05" class="form-label">Date of birth</label>
-            <input type="date" class="form-control w-auto" id="validationCustom05"
+            <input type="date" class="form-control" id="validationCustom05"
                    formControlName="dataOfBirth">
           </div>
-          <div class="col-md-6 ms-5">
+          <div class="col-md-6 ">
             <label for="validationCustom03" class="form-label">Password</label>
             <input type="password" class="form-control" id="validationCustom06"
                    [ngClass]="password?.invalid && alert? 'is-invalid': '' " formControlName="password">
