--- a/src/app/error/error403/error403.component.html
+++ b/src/app/error/error403/error403.component.html
@@ -1,7 +1,8 @@
-<div class="d-flex">
+<div class="d-flex align-items-center py-4 h-100">
+
 <img class="position-absolute top-50 start-50 translate-middle border border-danger border-4" src="assets/image/605a704f106eb50019d053e0.png">
 
-<a id="home"type="button" class="btn btn-outline-danger " href="http://localhost:4200" style="margin-top: 38%; margin-left: 48%">
+<a id="home"type="button" class="btn btn-outline-danger" href="http://localhost:4200" >
   <i class="bi bi-house"></i>
   Torna al login
 </a>
