--- a/src/app/home/post/post/post.component.html
+++ b/src/app/home/post/post/post.component.html
@@ -32,11 +32,11 @@
     <li class="nav-item">
       <button type="button" id="buttonLike" class="btn btn btn-outline-primary mx-2"
               [ngClass]="[post.liked ? 'active':'btn-outline-primary', loading ? 'disabled': ''] "
-              (click)="clickLike(post.id)"  >
-        <div *ngIf="loading; else elseBlock" class="spinner-border text-primary spinner-border-sm me-1"  role="status">
+              (click)="clickLike(post.id)">
+        <div *ngIf="loading; else elseBlock" class="spinner-border text-primary spinner-border-sm me-1" role="status">
         </div>
         <ng-template #elseBlock>
-        <i class="bi bi-hand-thumbs-up me-1"> </i>
+          <i class="bi bi-hand-thumbs-up me-1"> </i>
         </ng-template>
         like
       </button>
@@ -44,25 +44,16 @@
     <p>
 
       <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#collapseExample{{index}}" role="button"
-         aria-expanded="false" aria-controls="collapseExample" >
+         aria-expanded="false" aria-controls="collapseExample">
         All comments</a>
     </p>
     <div class="grid text-center w-100" style="row-gap: 0;">
       <div class="g-col-6">
         <div class="collapse" id="collapseExample{{index}}">
           <div class="card card-body">
-            <app-comment-list (newItemEvent)="getPost(post.id)" [commenti]="post.comments" [postId]="post.id"></app-comment-list>
-            <div *ngIf="errPost" class="alert alert-danger d-flex align-items-center mt-2" role="alert">
-              <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
-              <div>
-                Error loading comments
-              </div>
-              <button type="button" class="btn btn-outline-dark ms-4" (click)="getPost(post.id)"> Riprova</button>
-            </div>
-            <div *ngIf="loadingPost" class="text-center">
-            <div class="spinner-border text-primary spinner-border"  role="status">
-            </div>
-              </div>
+            <app-comment-list (newItemEvent)="getPost(post.id)"  [loadingPost]="loadingPost" [errPost]=errPost [commenti]="post.comments"
+                              [postId]="post.id"></app-comment-list>
+
           </div>
         </div>
       </div>
