--- a/src/app/error/error403/error403.component.html
+++ b/src/app/error/error403/error403.component.html
@@ -1,9 +1,14 @@
-<div class="d-flex align-items-center py-4 h-100">
 
-<img class="position-absolute top-50 start-50 translate-middle border border-danger border-4" src="assets/image/605a704f106eb50019d053e0.png">
 
-<a id="home"type="button" class="btn btn-outline-danger" href="http://localhost:4200" >
-  <i class="bi bi-house"></i>
-  Torna al login
-</a>
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <div class="col-md-5 p-lg-5 mx-auto my-5">
+    <img class="border border-danger border-4 img-fluid " src="assets/image/605a704f106eb50019d053e0.png">
+    <a class="btn btn-outline-danger mt-4" href="http://localhost:4200">
+        <i class="bi bi-house "></i>
+        Torna al login
+      </a>
+  </div>
+  <div class="product-device shadow-sm d-none d-md-block"></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 </div>
+
