tolto tutti i style messi a mano necessari

--- a/src/app/home/post/post/post.component.html
+++ b/src/app/home/post/post/post.component.html
@@ -47,7 +47,7 @@
          aria-expanded="false" aria-controls="collapseExample">
         All comments</a>
     </p>
-    <div class="grid text-center w-100" style="row-gap: 0;">
+    <div class="grid text-center w-100" >
       <div class="g-col-6">
         <div class="collapse" id="collapseExample{{index}}">
           <div class="card card-body">
