--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -3,7 +3,7 @@
   </div>
 </ng-container>
 <ng-template #elseBlock1>
-  <nav class="navbar bg-body-tertiary mt-3">
+  <nav class="navbar-toggler bg-body-tertiary mt-3">
     <div class="container-fluid">
       <form class="d-flex">
         <input #box class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search"
