--- a/src/app/home/pagina-principale/pagina-principale.component.html
+++ b/src/app/home/pagina-principale/pagina-principale.component.html
@@ -1,19 +1,20 @@
 <app-nav></app-nav>
-<div class="container-fluid  text-center h-100">
-  <div class="row">
-    <div class="col-3  border-end border-danger-subtle">
+<div class="container-fluid text-center h-100 ">
+  <div class="row" >
+    <div class="col-lg-2 d-lg-inline-flex  border-end border-danger-subtle" >
       <app-utente> </app-utente>
     </div>
-    <div class="col-6 ">
+    <div class="col-lg-7 d-lg-inline-flex ">
       <div class="container p-4">
       <app-nav-post></app-nav-post>
       <app-post-list></app-post-list>
       </div>
     </div>
-    <div class="col-3  border-start  border-danger-subtle">
-      <div class="container mx-3">
+
+    <div class="col-lg-3 d-lg-inline-flex border-start   border-danger-subtle">
+      <div class="container-fluid">
         <app-friends-list></app-friends-list>
-      </div>
+    </div>
     </div>
   </div>
 </div>
