sistemato tutto il responsive

--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="loading==true; else elseBlock1">
+<ng-container *ngIf="loading; else elseBlock1">
   <div class="spinner-border mt-2" role="status">
   </div>
 </ng-container>
@@ -7,7 +7,7 @@
     <div class="container-fluid">
       <form class="d-flex">
         <input #box class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search"
-            id="search"   formControlName="search"  (keyup.enter)="update(box.value)" (blur)="update(box.value)" >
+            id="search"   formControlName="search"   (keyup.enter)="update(box.value)" (blur)="update(box.value)" >
         <button class="btn btn-outline-success" type="button" (click)="searchFriends()"> Search</button>
       </form>
 
