--- a/src/app/home/pagina-principale/pagina-principale.component.html
+++ b/src/app/home/pagina-principale/pagina-principale.component.html
@@ -3,7 +3,9 @@
 <div class="container-fluid text-center h-100 ">
   <div class="row" >
     <div class="col-lg-2 d-lg-inline-flex  border-end border-danger-subtle" >
+      <div class="container-fluid">
       <app-utente> </app-utente>
+      </div>
     </div>
     <div class="col-lg-7 d-lg-inline-flex ">
       <div class="container p-4">
@@ -12,7 +14,7 @@
       </div>
     </div>
 
-    <div class="col-lg-3 d-lg-inline-flex border-start   border-danger-subtle">
+    <div class="col-lg-3 d-lg-inline-flex border-start border-danger-subtle">
       <div class="container-fluid">
         <app-friends-list></app-friends-list>
     </div>
