--- a/src/app/home/post/comment-list/comment-list.component.html
+++ b/src/app/home/post/comment-list/comment-list.component.html
@@ -16,7 +16,7 @@
         <div class="spinner-border text-primary spinner-border" role="status">
         </div>
       </div>
-    <app-create-new-comment (newItemEvent)="addnewItem(postId)" [postId]="postId"></app-create-new-comment>
+    <app-create-new-comment (newItemEvent)="addnewItem(postId)" [postId]="postId" [errPost]="errPost" [loadingPost]="loadingPost"></app-create-new-comment>
     </div>
   </ul>
   <ng-template #elseBlock>
@@ -32,7 +32,7 @@
       </div>
     </div>
     <p> Non ci sono commenti</p>
-    <app-create-new-comment (newItemEvent)="addnewItem(postId)"  [postId]="postId"></app-create-new-comment>
+    <app-create-new-comment (newItemEvent)="addnewItem(postId)"  [postId]="postId" [errPost]="errPost" [loadingPost]="loadingPost"></app-create-new-comment>
   </ng-template>
 
 
